src/test/ui/dep-graph/dep-graph-trait-impl-two-traits-same-method.stderr
error: OK
  --> $DIR/dep-graph-trait-impl-two-traits-same-method.rs:32:5
   |
LL |     #[rustc_then_this_would_need(typeck_tables_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `x::<impl Foo for u32>` to `typeck_tables_of`
  --> $DIR/dep-graph-trait-impl-two-traits-same-method.rs:41:5
   |
LL |     #[rustc_then_this_would_need(typeck_tables_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

